tests/reject/base_mismatch_var_arg.ty
# tychoc0 parity: a base-type mismatch supplied by a variable / index / call (not
# just a literal) must be a clean diagnostic in BOTH compilers, never a cc error.
fn need_int(n: int) -> int:
    return n
fn main():
    s := "hi"
    println(str(need_int(s)))
